Fixed the turning logo woohoo

--- a/turning-logo.css
+++ b/turning-logo.css
@@ -6,12 +6,9 @@
 */
 
 .wrapper__3af0b {
-    animation-name: rotate;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
+    transition: transform 2s;
 }
 
-@keyframes rotate {
-    0% {transform: rotate(0deg)}
-    100% {transform: rotate(360deg)}
+.wrapper__3af0b:hover {
+    transform: rotate(360deg);
 }
